WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
NEW
196562
Changing default website policies shouldn't change default website policies in subsequent navigations
https://bugs.webkit.org/show_bug.cgi?id=196562
Summary
Changing default website policies shouldn't change default website policies i...
Wenson Hsieh
Reported
2019-04-03 14:25:17 PDT
SSIA
Attachments
Patch
(5.41 KB, patch)
2019-04-03 17:45 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Fix the WPE build
(5.47 KB, patch)
2019-04-03 19:38 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Really fix the WPE build?
(5.48 KB, patch)
2019-04-03 19:50 PDT
,
Wenson Hsieh
thorton
: review+
Details
Formatted Diff
Diff
Patch for EWS
(5.22 KB, patch)
2019-04-04 13:23 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-04-03 14:25:50 PDT
<
rdar://problem/49573377
>
Wenson Hsieh
Comment 2
2019-04-03 17:45:00 PDT
Comment hidden (obsolete)
Created
attachment 366679
[details]
Patch
Wenson Hsieh
Comment 3
2019-04-03 19:38:44 PDT
Comment hidden (obsolete)
Created
attachment 366694
[details]
Fix the WPE build
Wenson Hsieh
Comment 4
2019-04-03 19:50:07 PDT
Created
attachment 366695
[details]
Really fix the WPE build?
Tim Horton
Comment 5
2019-04-04 12:55:26 PDT
Comment on
attachment 366695
[details]
Really fix the WPE build? View in context:
https://bugs.webkit.org/attachment.cgi?id=366695&action=review
> Source/WebKit/UIProcess/API/APIWebsitePolicies.cpp:65 > + WTF::String name = field.name(); > + WTF::String value = field.value(); > + if (auto newHeaderField = WebCore::HTTPHeaderField::create(WTFMove(name), WTFMove(value))) > + customHeaderFields.append(WTFMove(*newHeaderField));
Shouldn't this use HTTPHeaderField copy constructor
Wenson Hsieh
Comment 6
2019-04-04 13:12:35 PDT
Comment hidden (obsolete)
Comment on
attachment 366695
[details]
Really fix the WPE build? View in context:
https://bugs.webkit.org/attachment.cgi?id=366695&action=review
>> Source/WebKit/UIProcess/API/APIWebsitePolicies.cpp:65 >> + customHeaderFields.append(WTFMove(*newHeaderField)); > > Shouldn't this use HTTPHeaderField copy constructor
It rather should, but HTTPHeaderField doesn't currently have a copy constructor, so I'll add one and use it here.
Wenson Hsieh
Comment 7
2019-04-04 13:20:18 PDT
(In reply to Tim Horton from
comment #5
)
> Comment on
attachment 366695
[details]
> Really fix the WPE build? > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=366695&action=review
> > > Source/WebKit/UIProcess/API/APIWebsitePolicies.cpp:65 > > + WTF::String name = field.name(); > > + WTF::String value = field.value(); > > + if (auto newHeaderField = WebCore::HTTPHeaderField::create(WTFMove(name), WTFMove(value))) > > + customHeaderFields.append(WTFMove(*newHeaderField)); > > Shouldn't this use HTTPHeaderField copy constructor
👍🏻 Changed to use the default copy constructor.
Wenson Hsieh
Comment 8
2019-04-04 13:23:49 PDT
Created
attachment 366746
[details]
Patch for EWS
WebKit Commit Bot
Comment 9
2019-04-04 14:56:44 PDT
Comment on
attachment 366746
[details]
Patch for EWS Clearing flags on attachment: 366746 Committed
r243909
: <
https://trac.webkit.org/changeset/243909
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug